# reclaimed

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  cli.py  pyproject.toml  release.sh  requirements.txt  setup.py
disk_scanner/: INTERACTIVE.md  __init__.py  cli.py  disk_scanner.py  textual_ui.py
homebrew/: reclaimed.rb
reclaim/: __init__.py  __main__.py  cli.py
reclaim/core/: __init__.py  cache.py  errors.py  scanner.py  types.py
reclaim/io/: __init__.py  filesystem.py
reclaim/metrics/: __init__.py  buffer.py  collector.py  publisher.py  subscriber.py  types.py  utils.py
reclaim/ui/: __init__.py  formatters.py  styles.py  textual_app.py
reclaim/utils/: __init__.py  formatters.py  whitespace.py
reclaimed/: __init__.py  __main__.py  cli.py  version.py
reclaimed/core/: errors.py  scanner.py  types.py
reclaimed/io/: __init__.py  filesystem.py
reclaimed/metrics/: __init__.py  buffer.py  types.py
reclaimed/ui/: __init__.py  formatters.py  styles.py  textual_app.py
reclaimed/utils/: __init__.py  whitespace.py
tests/: conftest.py  test_cli.py  test_cli_detailed.py  test_disk_scanner.py  test_disk_scanner_detailed.py  test_textual_ui.py
tests/test_core/: test_scanner.py
