[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# Configuration for UV package build
package = true

[project]
name = "reclaimed"
dynamic = ["version"]
description = "A powerful disk usage analyzer with iCloud support"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Taylor Wilsdon", email = "taylor@taylorwilsdon.com"}
]
keywords = ["disk", "storage", "analyzer", "icloud", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "textual>=0.52.1",
    "typing_extensions>=4.12.2"
]

[project.urls]
Homepage = "https://github.com/taylorwilsdon/reclaimed"
Repository = "https://github.com/taylorwilsdon/reclaimed.git"
Issues = "https://github.com/taylorwilsdon/reclaimed/issues"

[project.scripts]
reclaimed = "reclaimed.cli:main"

[tool.setuptools]
packages = ["reclaimed", "reclaimed.core", "reclaimed.io", "reclaimed.metrics", "reclaimed.ui", "reclaimed.utils"]

[tool.setuptools.dynamic]
version = {attr = "reclaimed.version.__version__"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "."

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
